# KomunikatorKlient

./: .gitignore  CMakeLists.txt  Komunikator_klient.sln  README.md  WorkLog.txt  vcpkg-configuration.json  vcpkg.json
Komunikator_klient/: Client.cpp  Client.h  Komunikator_klient.vcxproj  Komunikator_klient.vcxproj.filters  Main.cpp
